Artículos -Fotos: Subir al servidor - BE

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,6 @@ public/images/
 # testing invoices
 app/Libraries/cfdi_sat/tmp
 app/Libraries/cfdi_sat/cfdi
+
+# true type fonts
+public/assets/fonts
